# pdrive-sync-rs

./: Cargo.toml  README.md  config.example.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
