[package]
name = "pdrive-sync-rs"
version = "0.1.0"
edition = "2024"
description = "Sync local folders through Proton Drive's official CLI and SDK"
license = "GPL-3.0-or-later"
repository = "https://github.com/screwys/pdrive-sync-rs"
readme = "README.md"

[lib]
name = "pdrive_sync"

[[bin]]
name = "pdrive-sync-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
dialoguer = "0.12"
globset = "0.4"
humantime = "2.3"
libc = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.27"
toml = "0.9"
trash = "5.2"
